objects/Opportunity_BAA_Based_Action__c/Opportunity_BAA_Based_Action__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Perform an action on opportunity going to closed won based off of the opportunity&#39;s related BAAs</description>
    <label>Opportunity BAA Based Action</label>
</CustomObject>