objects/Opportunity_BAA_Based_Action__c/fields/BAA_Criteria__c.field-meta.xml
<CustomField>
    <fullName>BAA_Criteria__c</fullName>
    <description>Opportunity -&gt; OppLocation -&gt; ServiceLoc -&gt; Location -&gt; Building &lt;- BAA</description>
    <label>BAA Criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>