objects/Opportunity_BAA_Based_Action__c/fields/Building_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Building_Criteria__c</fullName>
    <description>Opportunity -&gt; OppLoc -&gt; ServiceLoc -&gt; Location -&gt; Building</description>
    <label>Building Criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>