objects/Opportunity_BAA_Based_Action__c/fields/OLI_Criteria__c.field-meta.xml
<CustomField>
    <fullName>OLI_Criteria__c</fullName>
    <description>Opportunity -&gt; Solution (active only) -&gt; OLI
Mapped to Building, required to &quot;flag&quot; an opp</description>
    <label>OLI Criteria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>