objects/Opportunity_BAA_Based_Action__c/fields/Solution_Hurdle_Rate_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Solution_Hurdle_Rate_Requirement__c</fullName>
    <description>Above, Below, Ignore</description>
    <inlineHelpText>Above, Below, Ignore</inlineHelpText>
    <label>Solution Hurdle Rate Requirement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>