objects/Opportunity_BAA_Based_Action__c/fields/Task_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Task_Assignee__c</fullName>
    <description>Comma delimited valid values: Owner, InternalKickoffSalesChannelManager, RegionalAE, SalesEngineer or the name of a custom setting in ProcessConfiguration with key &quot;Assignee&quot; and NTID value
DOES NOT SEND IF NO VALUE FOUND</description>
    <label>Task Assignee</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>