objects/Opportunity_BAA_Based_Action__c/fields/Task_Definition__c.field-meta.xml
<CustomField>
    <fullName>Task_Definition__c</fullName>
    <label>Task Definition</label>
    <length>40</length>
    <type>Text</type>
</CustomField>