objects/Opportunity_BAA_Based_Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BAA_Criteria__c</columns>
    <columns>Building_Criteria__c</columns>
    <columns>OLI_Criteria__c</columns>
    <columns>Task_Assignee__c</columns>
    <columns>Task_Definition__c</columns>
    <columns>Task_Parent__c</columns>
    <columns>Send_Task_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>